--- a/Contactobootstrap.html
+++ b/Contactobootstrap.html
@@ -117,7 +117,7 @@
                                 <a class="nav-link" href="./bootstraphlc.html">HLC</a>
                             </li>
                             <li class="nav-item pb-2">
-                                <a class="nav-link" href="./Webalumnobootstrap.html">Pagina de Inicio</a>
+                                <a class="nav-link" href="./Index.html">Pagina de Inicio</a>
                             </li>
     
                         </ul>
