--- a/Index.html
+++ b/Index.html
@@ -134,7 +134,7 @@
                             <a class="nav-link" href="./bootstraphlc.html">HLC</a>
                         </li>
                         <li class="nav-item pb-2">
-                            <a class="nav-link" href="./Webalumnobootstrap.html">Pagina de Inicio</a>
+                            <a class="nav-link" href="./Index.html">Pagina de Inicio</a>
                         </li>
 
                     </ul>
