--- a/bootstrapservidor.html
+++ b/bootstrapservidor.html
@@ -135,7 +135,7 @@
                                 <a class="nav-link" href="./bootstraphlc.html">HLC</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link" href="./Webalumnobootstrap.html">Pagina de Inicio</a>
+                                <a class="nav-link" href="./Index.html">Pagina de Inicio</a>
                             </li>
     
                         </ul>
