--- a/Contactobootstrap.html
+++ b/Contactobootstrap.html
@@ -193,9 +193,12 @@
             </div>
         </div>
         <div class="row">
-               <div class="col-12">
-
-                <br>
+                <div class="col-10"></div>
+               <div class="col-2">
+                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Mas info</button>
+                <div id="demo" class="collapse in">
+                   Esta pagina esta en crecimiento
+                </div>
                </div>
         </div>
 
